# SDL2Template

./: Art.txt  Attractor.cpp  Attractor.h  Backgroundstar.cpp  Backgroundstar.h  Blackhole.cpp  Blackhole.h  CMakeLists.svn.txt.in  CMakeLists.txt  CMakeLists.txt.in  Camera.cpp  Camera.h  Collidable.cpp  Collidable.h  Consumer.cpp  Consumer.h  Game.cpp  Game.h  Object.cpp  Object.h  Planet.cpp  Planet.h  README.txt  Spaceship.cpp  Spaceship.h  TextureManager.cpp  TextureManager.h  main.cpp  rotmat.cpp  rotmat.h  screenobject.cpp  screenobject.h  simpleSpace_sheet.xcf  vector.cpp  vector.h
sdl_mixer/: CMakeLists.txt
